# rules_python_1631_repro

./: BUILD  MODULE.bazel  README.md  WORKSPACE  hello_world.py  pr_1634.patch  requirements-lock.txt
my_module/: __init__.py
