bazel_dep(name = "rules_python", version = "0.27.1")

# Configure Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    # Only set when you have mulitple toolchain versions.
    is_default = True,
    python_version = "3.8",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    requirements_lock = "//:requirements-lock.txt",
    hub_name = "pip",
    python_version = "3.8",
)
pip.override(
    file = "bazel_runfiles-0.27.1-py3-none-any.whl",
    patch_strip = 1,
    patches = [
        "//:pr_1634.patch",
    ],
)

use_repo(pip, "pip")
